fix: Fixed common mark column overflow

--- a/wwwroot/web-components/query-grid/cell-templates/query-grid-cell-common-mark.scss
+++ b/wwwroot/web-components/query-grid/cell-templates/query-grid-cell-common-mark.scss
@@ -1,3 +1,9 @@
+p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 p, ol {
     margin: 0;
     padding: 0;
